syntax = "proto3";

package grpc;

import public "common.proto";
import "google/protobuf/timestamp.proto";

message EventEntry {
    uint32 id = 1;
    string link_id = 3;
    string alias_id = 4;
    string target_id = 5;
    string identifier = 6;
    string url = 7;
    int32 code = 8;
    bytes context = 9;
    google.protobuf.Timestamp created_at = 10;
}

message EventFilter {
    string link_id = 3;
    string alias_id = 4;
    string target_id = 5;
    string identifier = 6;
    string url = 7;
    int32 code = 8;
    TimestampRange created_at = 10;

    uint32 limit = 15;
}

message ReadEventsRequest {
    oneof filter {
        uint32 id = 1;
        EventFilter condition = 2;
    }
}

message ReadEventsResponse {
    repeated EventEntry logs = 1;

    Error err = 15;
}

message ListenEventsRequest {
    EventFilter filter = 1;
}

service Event {
    rpc Read (ReadEventsRequest) returns (ReadEventsResponse) {}
    rpc Listen (ListenEventsRequest) returns (stream EventEntry) {}
}
