// protoc -Ipkg/server/grpc/ --go_out=plugins=grpc:pkg/server/grpc storage.proto
syntax = "proto3";
package grpc;

message CreateNamespaceRequest {}

message CreateNamespaceResponse {}

message ReadNamespaceRequest {}

message ReadNamespaceResponse {}

message UpdateNamespaceRequest {}

message UpdateNamespaceResponse {}

message DeleteNamespaceRequest {}

message DeleteNamespaceResponse {}

service Namespace {
    rpc Create (CreateNamespaceRequest) returns (CreateNamespaceResponse) {}
    rpc Read (ReadNamespaceRequest) returns (ReadNamespaceResponse) {}
    rpc Update (UpdateNamespaceRequest) returns (UpdateNamespaceResponse) {}
    rpc Delete (DeleteNamespaceRequest) returns (DeleteNamespaceResponse) {}
}

message CreateLinkRequest {}

message CreateLinkResponse {}

message ReadLinkRequest {}

message ReadLinkResponse {}

message UpdateLinkRequest {}

message UpdateLinkResponse {}

message DeleteLinkRequest {}

message DeleteLinkResponse {}

service Link {
    rpc Create (CreateLinkRequest) returns (CreateLinkResponse) {}
    rpc Read (ReadLinkRequest) returns (ReadLinkResponse) {}
    rpc Update (UpdateLinkRequest) returns (UpdateLinkResponse) {}
    rpc Delete (DeleteLinkRequest) returns (DeleteLinkResponse) {}
}

message CreateAliasRequest {}

message CreateAliasResponse {}

message ReadAliasRequest {}

message ReadAliasResponse {}

message UpdateAliasRequest {}

message UpdateAliasResponse {}

message DeleteAliasRequest {}

message DeleteAliasResponse {}

service Alias {
    rpc Create (CreateAliasRequest) returns (CreateAliasResponse) {}
    rpc Read (ReadAliasRequest) returns (ReadAliasResponse) {}
    rpc Update (UpdateAliasRequest) returns (UpdateAliasResponse) {}
    rpc Delete (DeleteAliasRequest) returns (DeleteAliasResponse) {}
}

message CreateTargetRequest {}

message CreateTargetResponse {}

message ReadTargetRequest {}

message ReadTargetResponse {}

message UpdateTargetRequest {}

message UpdateTargetResponse {}

message DeleteTargetRequest {}

message DeleteTargetResponse {}

service Target {
    rpc Create (CreateTargetRequest) returns (CreateTargetResponse) {}
    rpc Read (ReadTargetRequest) returns (ReadTargetResponse) {}
    rpc Update (UpdateTargetRequest) returns (UpdateTargetResponse) {}
    rpc Delete (DeleteTargetRequest) returns (DeleteTargetResponse) {}
}
